--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+body {
+    display:flex;
+    justify-content:center;
+}
+
+
 h1 {
     color: red;
     bacKground-color:blue;
+    width: 30%;
+    border-radius: 5px;
+    text-align:center;
 }
