--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 
 
 h1 {
-    color: red;
-    bacKground-color:blue;
+    color: pink;
+    bacKground-color:black;
     width: 30%;
     border-radius: 5px;
     text-align:center;
